fix(ui): re-align icons in footer, remove margin, increase gap
Former-commit-id: 38b80648d9c1862200d6d2b33e5f1396010f75b0
Former-commit-id: c95b4fa415251e82f662cec105de32f26c694bc0

--- a/src/interworx/images/configserver.css
+++ b/src/interworx/images/configserver.css
@@ -902,7 +902,7 @@ th
 .footer .footer-right
 {
     display: flex;
-	gap: 5px;
+	gap: 6px;
 }
 
 /*
@@ -918,7 +918,6 @@ th
 	text-decoration: none;
 	font-size: 14px;
 	cursor: pointer;
-	margin-right: 5px;
 }
 
 /*
@@ -1004,7 +1003,7 @@ button.btn-update
     align-items: center;
     justify-content: center;
     padding: 0;
-    border-radius: 6px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
